--- a/build.yaml
+++ b/build.yaml
@@ -1057,6 +1057,16 @@ targets:
   - grpc
   - gpr_test_util
   - gpr
+- name: dns_resolver_connectivity_test
+  build: test
+  language: c
+  src:
+  - test/core/client_config/resolvers/dns_resolver_connectivity_test.c
+  deps:
+  - grpc_test_util
+  - grpc
+  - gpr_test_util
+  - gpr
 - name: dns_resolver_test
   build: test
   language: c
