moved apt-gets from .sh file to dockerfile for nanopb

--- a/templates/tools/dockerfile/test/sanity/Dockerfile.template
+++ b/templates/tools/dockerfile/test/sanity/Dockerfile.template
@@ -34,7 +34,13 @@
   <%include file="../../apt_get_basic.include"/>
   #========================
   # Sanity test dependencies
-  RUN apt-get update && apt-get install -y python-pip
+  RUN apt-get update && apt-get install -y \
+        python-pip \
+        autoconf \
+        automake \
+        libtool \
+        curl \
+        python-virtualenv
   RUN pip install simplejson mako
 
   #===================
