--- a/templates/tools/dockerfile/test/fuzzers.template
+++ b/templates/tools/dockerfile/test/fuzzers.template
@@ -37,11 +37,8 @@ template: |
 
   <%include file="../apt_get_basic.include"/>
   <%include file="../cxx_deps.include"/>
+  <%include file="../clang_update.include"/>
   <%include file="../run_tests_addons.include"/>
-  RUN git clone -n -b master http://llvm.org/git/llvm.git && ${'\\'}
-    cd llvm && ${'\\'}
-    git checkout 308857f && ${'\\'}
-    cd ..
   RUN clang++ -c -g -O2 -std=c++11 llvm/lib/Fuzzer/*.cpp -IFuzzer
   RUN ar ruv libFuzzer.a Fuzzer*.o
   RUN mv libFuzzer.a /usr/lib
