add unix_sockets_posix module to build system and fix compilation errors

--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
     "src/core/iomgr/timer.h",
     "src/core/iomgr/timer_heap.h",
     "src/core/iomgr/udp_server.h",
+    "src/core/iomgr/unix_sockets_posix.h",
     "src/core/iomgr/wakeup_fd_pipe.h",
     "src/core/iomgr/wakeup_fd_posix.h",
     "src/core/iomgr/workqueue.h",
@@ -305,6 +306,8 @@
     "src/core/iomgr/timer.c",
     "src/core/iomgr/timer_heap.c",
     "src/core/iomgr/udp_server.c",
+    "src/core/iomgr/unix_sockets_posix.c",
+    "src/core/iomgr/unix_sockets_posix_noop.c",
     "src/core/iomgr/wakeup_fd_eventfd.c",
     "src/core/iomgr/wakeup_fd_nospecial.c",
     "src/core/iomgr/wakeup_fd_pipe.c",
