--- a/package.xml
+++ b/package.xml
@@ -225,6 +225,7 @@
     <file baseinstalldir="/" name="src/core/iomgr/timer.h" role="src" />
     <file baseinstalldir="/" name="src/core/iomgr/timer_heap.h" role="src" />
     <file baseinstalldir="/" name="src/core/iomgr/udp_server.h" role="src" />
+    <file baseinstalldir="/" name="src/core/iomgr/unix_sockets_posix.h" role="src" />
     <file baseinstalldir="/" name="src/core/iomgr/wakeup_fd_pipe.h" role="src" />
     <file baseinstalldir="/" name="src/core/iomgr/wakeup_fd_posix.h" role="src" />
     <file baseinstalldir="/" name="src/core/iomgr/workqueue.h" role="src" />
@@ -365,6 +366,8 @@
     <file baseinstalldir="/" name="src/core/iomgr/timer.c" role="src" />
     <file baseinstalldir="/" name="src/core/iomgr/timer_heap.c" role="src" />
     <file baseinstalldir="/" name="src/core/iomgr/udp_server.c" role="src" />
+    <file baseinstalldir="/" name="src/core/iomgr/unix_sockets_posix.c" role="src" />
+    <file baseinstalldir="/" name="src/core/iomgr/unix_sockets_posix_noop.c" role="src" />
     <file baseinstalldir="/" name="src/core/iomgr/wakeup_fd_eventfd.c" role="src" />
     <file baseinstalldir="/" name="src/core/iomgr/wakeup_fd_nospecial.c" role="src" />
     <file baseinstalldir="/" name="src/core/iomgr/wakeup_fd_pipe.c" role="src" />
