--- a/templates/tools/dockerfile/test/fuzzer/Dockerfile.template
+++ b/templates/tools/dockerfile/test/fuzzer/Dockerfile.template
@@ -1,9 +1,5 @@
 %YAML 1.2
----
-foreach: targets
-output_name: ${selected.name}/Dockerfile
-cond: selected.build == 'fuzzer'
-template: |
+--- |
   # Copyright 2015-2016, Google Inc.
   # All rights reserved.
   #
@@ -35,10 +31,10 @@ template: |
 
   FROM debian:jessie
 
-  <%include file="../apt_get_basic.include"/>
-  <%include file="../cxx_deps.include"/>
-  <%include file="../clang_update.include"/>
-  <%include file="../run_tests_addons.include"/>
+  <%include file="../../apt_get_basic.include"/>
+  <%include file="../../cxx_deps.include"/>
+  <%include file="../../clang_update.include"/>
+  <%include file="../../run_tests_addons.include"/>
   RUN clang++ -c -g -O2 -std=c++11 llvm/lib/Fuzzer/*.cpp -IFuzzer
   RUN ar ruv libFuzzer.a Fuzzer*.o
   RUN mv libFuzzer.a /usr/lib
