--- a/examples/node/package.json
+++ b/examples/node/package.json
@@ -2,7 +2,9 @@
   "name": "grpc-examples",
   "version": "0.1.0",
   "dependencies": {
+    "async": "^1.5.2",
     "grpc": "0.13.0",
+    "lodash": "^4.6.1",
     "minimist": "^1.2.0"
   }
 }
