Temporarily disable qps tsan tests since they are exposing a tsan internal error until we upgrade tsan

--- a/build.yaml
+++ b/build.yaml
@@ -2450,6 +2450,8 @@ targets:
   - gpr_test_util
   - gpr
   - grpc++_test_config
+  exclude_configs:
+  - tsan
   platforms:
   - mac
   - linux
@@ -2469,6 +2471,8 @@ targets:
   - gpr_test_util
   - gpr
   - grpc++_test_config
+  exclude_configs:
+  - tsan
   platforms:
   - mac
   - linux
